# openvpn-ldapcmd

./: .gitignore  COPYING  ChangeLog  ChangeLog.md  Makefile.am  NEWS  NEWS.md  README.md  acinclude.m4  autogen.sh  configure.ac
build-aux/: git-tar-name.txt
doc/: genldif.sh  openvpn-ldapcmd.schema
openvpn-ldapcmd.xcodeproj/: project.pbxproj
openvpn-ldapcmd.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
openvpn-ldapcmd.xcodeproj/project.xcworkspace/xcshareddata/: openvpn-ldapcmd.xcscmblueprint
openvpn-ldapcmd.xcodeproj/xcuserdata/syzdek.xcuserdatad/xcschemes/: ldapoptions.xcscheme  xcschememanagement.plist
src/: .gitignore  Makefile  debug-openvpn-ldapcmd.in  ldapfnc.c  ldapfnc.h  log.c  log.h  openvpn-ldapcmd-test.sh.in  openvpn-ldapcmd.profile  openvpn-ldapcmd.profile.in
src/ldapcmd/: common.c  common.h  ldapfnc.c  ldapfnc.h  main.c
src/scripts/: openvpn-ldapcmd-test.sh.in
src/utils/: ldapoptions.c
